Fix leo image stretching in footer by removing fixed width

--- a/css/main.css
+++ b/css/main.css
@@ -513,7 +513,7 @@ span.hidden-xs {
 }
 
 #page-footer img {
-	width:100px;
+	width:auto;
 }
 
 #page-education .well h3 {
